frame/support/test/tests/pallet_ui/storage_pov_estimate_on_pallet.rs
#[frame_support::pallet]
mod pallet {
	use frame_support::pallet_prelude::*;

	#[pallet::config]
	pub trait Config: frame_system::Config {}

	#[pallet::pallet]
	#[pallet::pov_estimate = MaxEncodedLen]
	pub struct Pallet<T>(_);

	#[pallet::error]
	pub enum Error<T> {}

	#[pallet::storage]
	type Foo<T: Config> = StorageValue<_, u8>;
}

fn main() {
}
